Fixed spelling in documentation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required(VERSION 2.6)
 set(PRJ_NAME foobar)
 #indicate type of the project as executable, otherwise it is a library
 set(PRJ_TYPE_EXECUTABLE 1)
-#allways build libarary (with object files)
+#always build library (with object files)
 set(PRJ_BUILD_LIBRARY 1)
 #main file name - used to filter this with object files
 set(PRJ_MAIN_FILE "main.c")
